# Lab1_var6_task5

./: .gitignore  CMakeLists.txt  image.h  main.cpp
